--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 
 # but do not ignore the config.fish file
 !/Homeworks/Homework 1/Homework 1.pdf
-#!/Homeworks/Homework 2/Homework 2.pdf
+!/Homeworks/Homework 2/Homework 2.pdf
 #!/Homeworks/Homework 3/Homework 3.pdf
 #!/Homeworks/Homework 4/Homework 4.pdf
 #!/Homeworks/Homework 5/Homework 5.pdf
