Initial Commit - Lecture 3 - The Intertemporal Tradeoff
Initial Commit for  Lecture 3 - The Intertemporal Tradeoff

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 !/Lecture 0 - Intro
 !/Lecture 1 - Macroeconomic Aggregates
 !/Lecture 2 - The Labor-Leisure Tradeoff
-#!/Lecture 3 - The Intertemporal Tradeoff
+!/Lecture 3 - The Intertemporal Tradeoff
 #!/Lecture 4 - Growth
 #!/Lecture 5 - Understanding Immigration
 #!/Lecture 6 - Robots and Automation
@@ -29,7 +29,7 @@
 /Lecture 0 - Intro/*
 /Lecture 1 - Macroeconomic Aggregates/*
 /Lecture 2 - The Labor-Leisure Tradeoff/*
-#/Lecture 3 - The Intertemporal Tradeoff/*
+/Lecture 3 - The Intertemporal Tradeoff/*
 #/Lecture 4 - Growth/*
 #/Lecture 5 - Understanding Immigration/*
 #/Lecture 6 - Robots and Automation/*
@@ -48,7 +48,7 @@
 !/Lecture 0 - Intro/Introduction.pdf
 !/Lecture 1 - Macroeconomic Aggregates/Macroeconomic Aggregates.pdf
 !/Lecture 2 - The Labor-Leisure Tradeoff/LaborLecture.pdf
-#!/Lecture 3 - The Intertemporal Tradeoff/*.pdf
+!/Lecture 3 - The Intertemporal Tradeoff/The Intertemporal Tradeoff.pdf
 #!/Lecture 4 - Growth/*.pdf
 #!/Lecture 5 - Understanding Immigration/*.pdf
 #!/Lecture 6 - Robots and Automation/*.pdf
