Initial Commit - Lecture 5 - Immigration
Initial Commit for Lecture 5: Immigration

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 !/Lecture 2 - The Labor-Leisure Tradeoff
 !/Lecture 3 - The Intertemporal Tradeoff
 !/Lecture 4 - Growth
-#!/Lecture 5 - Understanding Immigration
+!/Lecture 5 - Understanding Immigration
 #!/Lecture 6 - Robots and Automation
 #!/Lecture 7 - Inequality
 #!/Lecture 8 - Cryptocurrency
@@ -31,7 +31,7 @@
 /Lecture 2 - The Labor-Leisure Tradeoff/*
 /Lecture 3 - The Intertemporal Tradeoff/*
 /Lecture 4 - Growth/*
-#/Lecture 5 - Understanding Immigration/*
+/Lecture 5 - Understanding Immigration/*
 #/Lecture 6 - Robots and Automation/*
 #/Lecture 7 - Inequality/*
 #/Lecture 8 - Cryptocurrency/*
@@ -50,7 +50,7 @@
 !/Lecture 2 - The Labor-Leisure Tradeoff/LaborLecture.pdf
 !/Lecture 3 - The Intertemporal Tradeoff/The Intertemporal Tradeoff.pdf
 !/Lecture 4 - Growth/Crash Course in Growth Theory.pdf
-#!/Lecture 5 - Understanding Immigration/*.pdf
+!/Lecture 5 - Understanding Immigration/Immigration.pdf
 #!/Lecture 6 - Robots and Automation/*.pdf
 #!/Lecture 7 - Inequality/*.pdf
 #!/Lecture 8 - Cryptocurrency/*.pdf
