Initial Commit - Lecture 7 - Inequality
Initial Commit for Lecture 7: Inequality

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 !/Lecture 4 - Growth
 !/Lecture 5 - Understanding Immigration
 !/Lecture 6 - Robots and Automation
-#!/Lecture 7 - Inequality
+!/Lecture 7 - Inequality
 #!/Lecture 8 - Cryptocurrency
 #!/Lecture 8 - Social Safety Net and Fiscal Policy
 #!/Lecture 9 - UBI
@@ -33,7 +33,7 @@
 /Lecture 4 - Growth/*
 /Lecture 5 - Understanding Immigration/*
 /Lecture 6 - Robots and Automation/*
-#/Lecture 7 - Inequality/*
+/Lecture 7 - Inequality/*
 #/Lecture 8 - Cryptocurrency/*
 #/Lecture 8 - Social Safety Net and Fiscal Policy/*
 #/Lecture 9 - UBI/*
@@ -52,7 +52,7 @@
 !/Lecture 4 - Growth/Crash Course in Growth Theory.pdf
 !/Lecture 5 - Understanding Immigration/Immigration.pdf
 !/Lecture 6 - Robots and Automation/*.pdf
-#!/Lecture 7 - Inequality/*.pdf
+!/Lecture 7 - Inequality/Inequality.pdf
 #!/Lecture 8 - Cryptocurrency/*.pdf
 #!/Lecture 8 - Social Safety Net and Fiscal Policy/*.pdf
 #!/Lecture 9 - UBI/*.pdf
