Initial Commit - Lecture 8 - Cryptocurrency
Initial Commit for Lecture 8: Cryptocurrency

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 !/Lecture 5 - Understanding Immigration
 !/Lecture 6 - Robots and Automation
 !/Lecture 7 - Inequality
-#!/Lecture 8 - Cryptocurrency
+!/Lecture 8 - Cryptocurrency
 #!/Lecture 8 - Social Safety Net and Fiscal Policy
 #!/Lecture 9 - UBI
 #!/Lecture 10 - Monetary Policy Basics
@@ -34,7 +34,7 @@
 /Lecture 5 - Understanding Immigration/*
 /Lecture 6 - Robots and Automation/*
 /Lecture 7 - Inequality/*
-#/Lecture 8 - Cryptocurrency/*
+/Lecture 8 - Cryptocurrency/*
 #/Lecture 8 - Social Safety Net and Fiscal Policy/*
 #/Lecture 9 - UBI/*
 #/Lecture 10 - Monetary Policy Basics/*
@@ -53,7 +53,7 @@
 !/Lecture 5 - Understanding Immigration/Immigration.pdf
 !/Lecture 6 - Robots and Automation/*.pdf
 !/Lecture 7 - Inequality/Inequality.pdf
-#!/Lecture 8 - Cryptocurrency/*.pdf
+!/Lecture 8 - Cryptocurrency/*.pdf
 #!/Lecture 8 - Social Safety Net and Fiscal Policy/*.pdf
 #!/Lecture 9 - UBI/*.pdf
 #!/Lecture 10 - Monetary Policy Basics/*.pdf
