--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 !/Lecture 6 - Robots and Automation
 !/Lecture 7 - Inequality
 !/Lecture 8 - Cryptocurrency
-#!/Lecture 8 - Social Safety Net and Fiscal Policy
+!/Lecture 8 - Social Safety Net and Fiscal Policy
 #!/Lecture 9 - UBI
 #!/Lecture 10 - Monetary Policy Basics
 #!/Lecture 11 - MMT
@@ -35,7 +35,7 @@
 /Lecture 6 - Robots and Automation/*
 /Lecture 7 - Inequality/*
 /Lecture 8 - Cryptocurrency/*
-#/Lecture 8 - Social Safety Net and Fiscal Policy/*
+/Lecture 8 - Social Safety Net and Fiscal Policy/*
 #/Lecture 9 - UBI/*
 #/Lecture 10 - Monetary Policy Basics/*
 #/Lecture 11 - MMT/*
@@ -54,7 +54,7 @@
 !/Lecture 6 - Robots and Automation/*.pdf
 !/Lecture 7 - Inequality/Inequality.pdf
 !/Lecture 8 - Cryptocurrency/*.pdf
-#!/Lecture 8 - Social Safety Net and Fiscal Policy/*.pdf
+!/Lecture 8 - Social Safety Net and Fiscal Policy/FiscalPolicy.pdf
 #!/Lecture 9 - UBI/*.pdf
 #!/Lecture 10 - Monetary Policy Basics/*.pdf
 #!/Lecture 11 - MMT/*.pdf
