--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 !/Lecture 7 - Inequality
 !/Lecture 8 - Cryptocurrency
 !/Lecture 8 - Social Safety Net and Fiscal Policy
-#!/Lecture 9 - UBI
+!/Lecture 9 - UBI
 #!/Lecture 10 - Monetary Policy Basics
 #!/Lecture 11 - MMT
 #!/Lecture 12 - Crypto
@@ -36,7 +36,7 @@
 /Lecture 7 - Inequality/*
 /Lecture 8 - Cryptocurrency/*
 /Lecture 8 - Social Safety Net and Fiscal Policy/*
-#/Lecture 9 - UBI/*
+/Lecture 9 - UBI/*
 #/Lecture 10 - Monetary Policy Basics/*
 #/Lecture 11 - MMT/*
 #/Lecture 12 - Crypto/*
@@ -55,7 +55,7 @@
 !/Lecture 7 - Inequality/Inequality.pdf
 !/Lecture 8 - Cryptocurrency/*.pdf
 !/Lecture 8 - Social Safety Net and Fiscal Policy/FiscalPolicy.pdf
-#!/Lecture 9 - UBI/*.pdf
+!/Lecture 9 - UBI/UBI.pdf
 #!/Lecture 10 - Monetary Policy Basics/*.pdf
 #!/Lecture 11 - MMT/*.pdf
 #!/Lecture 12 - Crypto/*.pdf
