--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 !/Lecture 8 - Cryptocurrency
 !/Lecture 8 - Social Safety Net and Fiscal Policy
 !/Lecture 9 - UBI
-#!/Lecture 10 - Monetary Policy Basics
+!/Lecture 10 - Monetary Policy Basics
 #!/Lecture 11 - MMT
 #!/Lecture 12 - Crypto
 #!/Lecture 13 - Government Debt
@@ -37,7 +37,7 @@
 /Lecture 8 - Cryptocurrency/*
 /Lecture 8 - Social Safety Net and Fiscal Policy/*
 /Lecture 9 - UBI/*
-#/Lecture 10 - Monetary Policy Basics/*
+/Lecture 10 - Monetary Policy Basics/*
 #/Lecture 11 - MMT/*
 #/Lecture 12 - Crypto/*
 #/Lecture 13 - Government Debt/*
@@ -56,7 +56,7 @@
 !/Lecture 8 - Cryptocurrency/*.pdf
 !/Lecture 8 - Social Safety Net and Fiscal Policy/FiscalPolicy.pdf
 !/Lecture 9 - UBI/UBI.pdf
-#!/Lecture 10 - Monetary Policy Basics/*.pdf
+!/Lecture 10 - Monetary Policy Basics/*.pdf
 #!/Lecture 11 - MMT/*.pdf
 #!/Lecture 12 - Crypto/*.pdf
 #!/Lecture 13 - Government Debt/*.pdf
