--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 !/Lecture 10 - Monetary Policy Basics
 !/Lecture 11 - MMT
 !/Lecture 12 - Crypto
-#!/Lecture 13 - Government Debt
+!/Lecture 13 - Government Debt
 #!/Lecture 14 - Bank Runs and the U.S. Financial Crisis
 !/Bonus Lecture 2023 - Housing
 
@@ -41,7 +41,7 @@
 /Lecture 10 - Monetary Policy Basics/*
 /Lecture 11 - MMT/*
 /Lecture 12 - Crypto/*
-#/Lecture 13 - Government Debt/*
+/Lecture 13 - Government Debt/*
 /Bonus Lecture 2023 - Housing/*
 
 
@@ -60,7 +60,7 @@
 !/Lecture 10 - Monetary Policy Basics/*.pdf
 !/Lecture 11 - MMT/MMT.pdf
 !/Lecture 12 - Crypto/Crypto*.pdf
-#!/Lecture 13 - Government Debt/*.pdf
+!/Lecture 13 - Government Debt/Lecture 13 - Government Debt.pdf
 #!/Lecture 14 - Bank Runs and the U.S. Financial Crisis/*.pdf
 !/Bonus Lecture 2023 - Housing/Bonus*.pdf
 
